after order created send a telegram notification

--- a/.env.example
+++ b/.env.example
@@ -60,3 +60,7 @@ VITE_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
 TWILIO_SID=787897
 TWILIO_AUTH_TOKEN=sdfsdfwersf
 TWILIO_NUMBER=09060181233
+
+TELEGRAM_TOKEN="abc"
+TELEGRAM_CHAT_IDS=-1
+TELEGRAM_BASE_URL=https://api.example.org/
