--- a/.env.example
+++ b/.env.example
@@ -64,3 +64,5 @@ TWILIO_NUMBER=09060181233
 TELEGRAM_TOKEN="abc"
 TELEGRAM_CHAT_IDS=-1
 TELEGRAM_BASE_URL=https://api.example.org/
+
+GOOGLE_RECAPTCHA_SECRET=sdfsfiui87
