upload order iamge to digitalocean now

--- a/.env.example
+++ b/.env.example
@@ -66,3 +66,10 @@ TELEGRAM_CHAT_IDS=-1
 TELEGRAM_BASE_URL=https://api.example.org/
 
 GOOGLE_RECAPTCHA_SECRET=sdfsfiui87
+
+DIGITALOCEAN_SPACES_KEY=foo
+DIGITALOCEAN_SPACES_SECRET=bar
+DIGITALOCEAN_SPACES_ENDPOINT=https://foobar.com
+DIGITALOCEAN_SPACES_REGION=foo
+DIGITALOCEAN_SPACES_BUCKET=foobar
+DIGITALOCEAN_SPACES_BASE_URL='https://foobar.sgp1.foobar.com/'
