add place model/factory , create validation class , create google api

--- a/.env.example
+++ b/.env.example
@@ -66,6 +66,7 @@ TELEGRAM_CHAT_IDS=-1
 TELEGRAM_BASE_URL=https://api.example.org/
 
 GOOGLE_RECAPTCHA_SECRET=sdfsfiui87
+GOOGLE_PLACE_SECRET=sadiy38746sdkjfhsdf
 
 DIGITALOCEAN_SPACES_KEY=foo
 DIGITALOCEAN_SPACES_SECRET=bar
